# cpp-app-template

./: Dockerfile  README.md  amd64.Dockerfile  arm32v6.Dockerfile  arm32v7.Dockerfile  arm64v8.Dockerfile  build_docker.sh  cloudbuild.yaml  deployment.yaml
app/: CMakeLists.txt
app/cmake/: FindPahoMqttC.cmake  FindPahoMqttCpp.cmake
app/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  base64.cpp  main.cpp
